syntax = "proto3";

option go_package = "amusing-x.com/charon/charonservice";

package charonservice;

message SearchFilter {
  repeated int64 id = 1;
  repeated string name = 2;
  repeated string desc = 3;
}