syntax="proto3";

option  go_package = "amusingx.fit/amusingx/protos/europa/service/europa/proto";

import "europa/proto/sub_product.proto";

message SubProductListRequest {
  int64 Page = 1;
  int64 Limit = 2;
  int64 Offset = 3;
}

message SubProductListResponse {
    repeated SubProductDetail SubProducts = 1;
    int64 Page = 2;
    int64 Limit = 3;
    int64 Total = 4;
    bool HasNext = 5;
}